--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -36,8 +36,23 @@
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
         <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
-        <TextBlock x:Name="timeTextBlock" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" Text="Elapsed Time" VerticalAlignment="Center" MouseDown="TimeTextBlock_MouseDown" Grid.ColumnSpan="4" FontSize="36"/>
-
-
+        <TextBlock x:Name="recordTextBlock"
+                   Grid.Column="2"
+                   Grid.Row="4"
+                   Grid.ColumnSpan="2"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+                   FontSize="20"
+                   Margin="0,0,10,0"
+                   Text="Recorde: --"/>
+        <TextBlock x:Name="timeTextBlock"
+                   Grid.Column="0"
+                   Grid.Row="4"
+                   Grid.ColumnSpan="2"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Center"
+                   FontSize="30"
+                   Text="Elapsed Time"
+                   MouseDown="TimeTextBlock_MouseDown"/>
     </Grid>
 </Window>
